@@ -16,26 +16,9 @@
 #  
 #  You should have received a copy of the GNU General Public License
 #  along with this program.  If not, see <http://www.gnu.org/licenses/>
-#  
-if(NOT APPLE)
-TOOLDEF (sla
-  include/slalib-0.0
-  slalib/slalib.h
-  lib/slalib-0.0
-  NONE
-  sla
-  )
-else(NOT APPLE)
-TOOLDEF (sla
-  include
-  slalib/slalib.h
-  lib
-  NONE
-  sla
-  )
-endif(NOT APPLE)
+#
 
-if(NOT SLA_FOUND)
+
 TOOLDEF (pal
   include
   star/pal.h
@@ -54,4 +37,23 @@ TOOLDEF (pal
   starlink_pal
   ) 
 endif(NOT PAL_FOUND)
-endif(NOT SLA_FOUND)
+
+if (NOT PAL_FOUND)
+if(NOT APPLE)
+TOOLDEF (sla
+  include/slalib-0.0
+  slalib/slalib.h
+  lib/slalib-0.0
+  NONE
+  sla
+  )
+else(NOT APPLE)
+TOOLDEF (sla
+  include
+  slalib/slalib.h
+  lib
+  NONE
+  sla
+  )
+endif(NOT APPLE)
+endif(NOT PAL_FOUND)
